--- a/client/docs.jade
+++ b/client/docs.jade
@@ -25,7 +25,7 @@
 
 
 template(name='cloud')
-    #cloud.ui.basic.center.aligned.segment
+    #cloud
         //- .ui.left.icon.input
         //-     i.search.icon
         //-     +inputAutocomplete settings=settings id="search" class="" autocomplete="off" 
