--- a/client/accounts/register.jade
+++ b/client/accounts/register.jade
@@ -2,18 +2,6 @@ template(name='register')
     .ui.padded.stackable.grid
         .centered.row
             .twelve.wide.column
-                img.ui.centered.image(src="{{c.url 'henry_logo'}}")
-                .ui.ordered.two.steps
-                    .active.step
-                        .content
-                            .title Registration
-                            .description
-                    .step
-                        .content
-                            .title Questionaire
-                            .description
-        .centered.row
-            .twelve.wide.column
 
                 if message
                     h4.ui.center.aligned.header #{message}
@@ -95,34 +83,34 @@ template(name='register_therapist')
                         a(href='/login') Sign In
 
 
-template(name='login')
-    .ui.padded.stackable.grid
-        .centered.row
-            .twelve.wide.column
-                h1.ui.center.aligned.header Gold Run Log In 
-                if message
-                    h4.ui.center.aligned.header #{message}
-                .ui.fluid.labeled.input(class=login_class)
-                    .ui.basic.label 
-                        i.user.icon
-                        |Username
-                    input.username(type='text')
-                .ui.fluid.labeled.input(class=login_class)
-                    .ui.basic.label 
-                        i.lock.icon
-                        | Password
-                    input.password(type='password' placeholder='password')
-                if username
-                    if logging_in
-                        .ui.fluid.large.button.enter(title="Login #{username}" class=enter_class)
-                            |Login '#{username}'
-                            i.right.arrow.icon
-                    else
-                        .ui.center.aligned.secondary.segment
-                            .ui.small.grey.header Username "#{username}" not found
-                            a(href='/register') Register
-                        
-                        
-                .ui.center.aligned.secondary.segment    
-                    .ui.small.header If you don't have an account 
-                    a.ui.button(href='/register') Register
+//- template(name='login')
+//-     .ui.padded.stackable.grid
+//-         .centered.row
+//-             .twelve.wide.column
+//-                 h1.ui.center.aligned.header Gold Run Log In 
+//-                 if message
+//-                     h4.ui.center.aligned.header #{message}
+//-                 .ui.fluid.labeled.input(class=login_class)
+//-                     .ui.basic.label 
+//-                         i.user.icon
+//-                         |Username
+//-                     input.username(type='text')
+//-                 .ui.fluid.labeled.input(class=login_class)
+//-                     .ui.basic.label 
+//-                         i.lock.icon
+//-                         | Password
+//-                     input.password(type='password' placeholder='password')
+//-                 if username
+//-                     if logging_in
+//-                         .ui.fluid.large.button.enter(title="Login #{username}" class=enter_class)
+//-                             |Login '#{username}'
+//-                             i.right.arrow.icon
+//-                     else
+//-                         .ui.center.aligned.secondary.segment
+//-                             .ui.small.grey.header Username "#{username}" not found
+//-                             a(href='/register') Register
+//- 
+//- 
+//-                 .ui.center.aligned.secondary.segment    
+//-                     .ui.small.header If you don't have an account 
+//-                     a.ui.button(href='/register') Register
