checkpoint converting type and schema refs to model, combine first round gr site model structure with classic facet to delta/dao schema structure with model naming

--- a/components/delta/delta.jade
+++ b/components/delta/delta.jade
@@ -3,7 +3,7 @@ template(name='delta')
         .ui.stackable.grid
             .row
                 // .twelve.wide.column.padleft.scrolling(class=delta_left_column_class)
-                .eight.wide.right.aligned.column.scrolling
+                .eight.wide.column.scrolling
                     .ui.right.aligned.inline.header
                         i.icon(class=icon)
                         | #{title}
