--- a/components/delta/model.jade
+++ b/components/delta/model.jade
@@ -1,3 +1,85 @@
+template(name='type_edit')
+    with doc
+        .ui.stackable.padded.grid
+            .centered.row
+                .four.wide.column
+                    .ui.header(title="Type: #{type}")
+                        |#{title}
+                    each bricks
+                        if header
+                            +Template.dynamic template=view_template 
+                    div
+                    +creation_info
+                    a.ui.fluid.button(href="/m/#{type}/#{_id}/view")
+                        i.checkmark.icon
+                        | save
+                    +remove_button
+                .twelve.wide.column
+                    //- |#{type}
+                    each small_bricks
+                        +Template.dynamic template=edit_template 
+                    each big_bricks
+                        +Template.dynamic template=edit_template 
+                        // .ui.header #{key} [#{field}] #{label}
+
+
+template(name='model_view')
+    with current_doc
+        .ui.stackable.padded.grid
+            .row
+                .sixteen.wide.column
+                    .ui.breadcrumb
+                        a.section(href="/m/#{current_model.slug}" title=current_model.plural)
+                            .ui.compact.small.button
+                                if model.color_icon
+                                     +icolor name=model.color_icon classes='ui mini inline image'
+                                // else
+                                // i.icon(class=current_model.icon)
+                                |#{current_model.title}
+                        .divider
+                            i.chevron.right.icon
+                        .active.section
+                            if icon
+                                i.icon(class=icon)
+                            if title
+                                |#{title}
+                            else
+                                | View #{type}
+            .row
+                .four.wide.column
+                    // .ui.header
+                    //     a.ui.icon.button(href="/m/#{type}" title=plural)
+                    //         i.chevron.left.icon
+                    //     |View #{type}
+                    if can_edit
+                        a.ui.fluid.button(href="/m/#{type}/#{_id}/edit")
+                            i.pencil.icon
+                            |Edit
+                    each model.actions
+                        +Template.dynamic template=this data=current_doc
+                    // +user_list_toggle key='bookmark_ids' icon='bookmark' label='Bookmark' color='red'
+                    +creation_info
+                .twelve.wide.column
+                    .ui.header
+                        each bricks
+                            if header
+                                +Template.dynamic template=view_template 
+                        // if icon
+                        //     i.icon(class=icon)
+                        // |#{title}
+                    each bricks
+                        unless header
+                            .item
+                                +Template.dynamic template=view_template 
+                    div
+                    +comments
+                    if watson
+                        +watson_view
+                    
+                    
+
+
+
 template(name='edit_model')
     with model
         .ui.stackable.padded.grid
@@ -28,34 +110,34 @@ template(name='field_edit')
     +number_edit key='rank' label='rank'                  
 
             
-template(name='view_model')
-    with model
-        .ui.stackable.padded.grid
-            .four.wide.column
-                h1.ui.header #{title}
-                .ui.circular.icon.big.green.button.add_child(title="Add #{slug}")
-                    i.plus.icon
-                a.ui.icon.circular.blue.big.button(href="/model/edit/#{_id}")
-                    i.pencil.icon
-                .ui.form
-                    +text_view key='title'
-                    +text_view key='slug'
-                    +text_view key='icon'
-                    +textarea_view key='description'
-                    +array_view key='tags'
-                +cloud filter=slug
-        
-            .twelve.wide.column
-                //- .ui.header Fields
-                //- each fields
-                //-     .ui.divider
-                //-     +field_view
-                each model_docs
-                    .ui.fluid.card
-                        .content
-                            +Template.dynamic template=model_doc
-                            +array_view key='tags'
-                            +edit_button
+//- template(name='view_model')
+//-     with model
+//-         .ui.stackable.padded.grid
+//-             .four.wide.column
+//-                 h1.ui.header #{title}
+//-                 .ui.circular.icon.big.green.button.add_child(title="Add #{slug}")
+//-                     i.plus.icon
+//-                 a.ui.icon.circular.blue.big.button(href="/model/edit/#{_id}")
+//-                     i.pencil.icon
+//-                 .ui.form
+//-                     +text_view key='title'
+//-                     +text_view key='slug'
+//-                     +text_view key='icon'
+//-                     +textarea_view key='description'
+//-                     +array_view key='tags'
+//-                 +cloud filter=slug
+//- 
+//-             .twelve.wide.column
+//-                 //- .ui.header Fields
+//-                 //- each fields
+//-                 //-     .ui.divider
+//-                 //-     +field_view
+//-                 each model_docs
+//-                     .ui.fluid.card
+//-                         .content
+//-                             +Template.dynamic template=model_doc
+//-                             +array_view key='tags'
+//-                             +edit_button
         
 template(name='field_view')
     +text_view key='title'                    
