convert type to model, alpha combine model_edit and type_edit, need to merge fields/bricks and make work

--- a/client/bikes.jade
+++ b/client/bikes.jade
@@ -44,7 +44,7 @@ template(name='bike')
 
 
 template(name='edit_bike')
-    with doc
+    with current_doc
         .ui.text.container.segment
             .ui.center.aligned.header Edit Impounded Bike 
             .ui.form
