--- a/client/facet_staff_select.jade
+++ b/client/facet_staff_select.jade
@@ -1,6 +1,6 @@
 template(name='facet_staff_select')
     if doc
-        with doc
+        with current_doc
             if is_editing
                 .ui.labeled.fluid.input
                     .ui.basic.label Select Staff
