--- a/client/front_desk.jade
+++ b/client/front_desk.jade
@@ -82,7 +82,7 @@ template(name='schedule')
 
 
 // template(name='edit_bike')
-//     with doc
+//     with current_doc
 //         .ui.text.container.segment
 //             .ui.center.aligned.header Edit Impounded Bike 
 //             .ui.form
