working fields into fum, show fields in delta_result

--- a/client/fields.jade
+++ b/client/fields.jade
@@ -378,7 +378,7 @@ template(name='datetime_view')
 
 
 template(name='array_edit')
-    .ui.labeled.input
+    .ui.labeled.fluid.input
         .ui.label
             if icon
                 i.grey.icon(class=icon)
