add/remove facet filter methods, change field_value to paren 5, remove siebar

--- a/client/blocks.jade
+++ b/client/blocks.jade
@@ -16,6 +16,32 @@ template(name='comments')
                         i.thumbs.up.link.icon
                         i.remove.link.remove_comment.icon
 
+
+template(name='events_column')
+    .ui.accordion
+        h4.active.title
+            // +icolor name='edit-property' classes='ui inline image'
+                // .ui.inline.dividing.header 
+            i.rss.icon
+            | Log
+            i.dropdown.icon
+        .active.content
+            .ui.feed
+                each log_events
+                    .event
+                        .label
+                            img.ui.image(src="{{c.url object.image width=400 height=400 gravity='face' crop='fill'}}")
+                        .content
+                            .summary
+                                |#{body}
+                                .date
+                                    |#{when}
+                                if is_dev
+                                    +remove_button
+
+
+
+
 template(name='follow')
     .ui.segment
         .ui.header
