--- a/components/delta/delta.jade
+++ b/components/delta/delta.jade
@@ -1,9 +1,9 @@
 template(name='delta')
     with current_model
-        .ui.stackable.grid
+        .ui.stackable.padded.grid
             .row
                 // .twelve.wide.column.padleft.scrolling(class=delta_left_column_class)
-                .eight.wide.column.scrolling
+                .six.wide.column
                     .ui.right.aligned.inline.header
                         i.icon(class=icon)
                         | #{title}
@@ -38,7 +38,7 @@ template(name='delta')
                             
                     each current_delta.facets
                         +facet
-                .eight.wide.column.scrolling
+                .ten.wide.column.scrolling
                     each current_delta.result_ids
                         +delta_result
                 
@@ -48,17 +48,17 @@ template(name='facet')
     div
     |&nbsp;
     //- if filtering_res
-    //- .ui.inline.header 
-    //-     if icon
-    //-         i.small.grey.icon(class=icon)
-    //-     if label
-    //-         |#{label}
-    //-     else 
-    //-         |#{key}
-    .ui.icon.input
+    .ui.header 
         if icon
-            i.large.grey.icon(class=icon)
-        input.add_filter(type='text' placeholder=key)
+            i.small.grey.icon(class=icon)
+        if label
+            |#{label}
+        else 
+            |#{key}
+    //- .ui.icon.input
+    //-     if icon
+    //-         i.large.grey.icon(class=icon)
+    //-     input.add_filter(type='text' placeholder=key)
     //-     // i.grey.dropdown.icon
     //-         // i.dropdown.icon
     //-         // each filters
@@ -125,8 +125,12 @@ template(name='delta_result')
                         //- a.ui.icon.large.button(href="/m/#{type}/#{_id}/edit")
                         a.ui.icon.large.button(href="/m/#{model}/#{_id}/edit")
                             i.pencil.large.icon
-                    a.ui.icon.large.button(href="/m/#{model}/#{_id}/view")
-                        i.eye.large.icon
+                    if is_model
+                        a.ui.icon.large.button.route_model(href="/m/#{slug}")
+                            i.sitemap.large.icon
+                    else
+                        a.ui.icon.large.button(href="/m/#{model}/#{_id}/view")
+                            i.eye.large.icon
                     each model.actions
                         +Template.dynamic template=this data=..
                     +author_info
