--- a/client/blocks.jade
+++ b/client/blocks.jade
@@ -164,7 +164,7 @@ template(name='view_button')
 template(name='remove_button')
     a.ui.icon.button.remove(title='Delete')
         i.remove.red.icon
-        |Delete
+        //- |Delete
 
 template(name='add_button')
     a.ui.button.add(title='Add')
