--- a/components/delta/delta.jade
+++ b/components/delta/delta.jade
@@ -65,11 +65,11 @@ template(name='facet')
     //-         //     .unselect.ui.grey.button #{this}
     each filtering_res
         if name
-            .selector.ui.button.toggle_selection(class=toggle_value_class title=count)
+            .selector.ui.circular.button.toggle_selection(class=toggle_value_class title=count)
                 | #{name}
                 //- small #{count}
         else
-            .selector.ui.button.toggle_selection(class=toggle_value_class title=count)
+            .selector.ui.circular.button.toggle_selection(class=toggle_value_class title=count)
                 strong [null]
                 //- small #{count}
 
@@ -119,16 +119,14 @@ template(name='delta_result')
                         +Template.dynamic template=view_template 
                 .extra
                     // +user_list_toggle key='bookmark_ids' icon='bookmark' label='Bookmark' color='red'
-                    if is_dev
-                        +remove_button
-                    if can_edit
-                        //- a.ui.icon.large.button(href="/m/#{type}/#{_id}/edit")
-                        a.ui.icon.large.button(href="/m/#{model}/#{_id}/edit")
-                            i.pencil.large.icon
                     if is_model
                         a.ui.icon.large.button.route_model(href="/m/#{slug}")
                             i.sitemap.large.icon
+                        a.ui.icon.large.button.route_model(href="/model/edit/#{_id}")
+                            i.edit.large.icon
                     else
+                        a.ui.icon.large.button(href="/m/#{model}/#{_id}/edit")
+                            i.pencil.large.icon
                         a.ui.icon.large.button(href="/m/#{model}/#{_id}/view")
                             i.eye.large.icon
                     each model.actions
